@@ -1,4 +1,5 @@
 release 1.12
+- Grizzly 2 version update (to 2.2.1)
 - Fixed issue 898
   http://java.net/jira/browse/JERSEY-898
   Added missing null checks to ContainerRequest.evaluatePreconditions(Date | EntityTag)
